PredictorFactory/antlr/autogenerated/SQLParser.java
// Generated from /Users/jan/Documents/Git/PredictorFactory/PredictorFactory/antlr/parser/SQL.g4 by ANTLR 4.5.1
package autogenerated;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATEDIFF=1, DATETONUMBER=2, CORR=3, LBR=4, RBR=5, COMMA=6, TEXT=7, ARITHMETIC=8, 
		WS=9;
	public static final int
		RULE_expression = 0, RULE_bracket = 1, RULE_datediff = 2, RULE_datetonumber = 3, 
		RULE_corr = 4, RULE_payload = 5;
	public static final String[] ruleNames = {
		"expression", "bracket", "datediff", "datetonumber", "corr", "payload"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'('", "')'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DATEDIFF", "DATETONUMBER", "CORR", "LBR", "RBR", "COMMA", "TEXT", 
		"ARITHMETIC", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(SQLParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(SQLParser.TEXT, i);
		}
		public List<BracketContext> bracket() {
			return getRuleContexts(BracketContext.class);
		}
		public BracketContext bracket(int i) {
			return getRuleContext(BracketContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(SQLParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SQLParser.WS, i);
		}
		public List<TerminalNode> ARITHMETIC() { return getTokens(SQLParser.ARITHMETIC); }
		public TerminalNode ARITHMETIC(int i) {
			return getToken(SQLParser.ARITHMETIC, i);
		}
		public List<DatediffContext> datediff() {
			return getRuleContexts(DatediffContext.class);
		}
		public DatediffContext datediff(int i) {
			return getRuleContext(DatediffContext.class,i);
		}
		public List<DatetonumberContext> datetonumber() {
			return getRuleContexts(DatetonumberContext.class);
		}
		public DatetonumberContext datetonumber(int i) {
			return getRuleContext(DatetonumberContext.class,i);
		}
		public List<CorrContext> corr() {
			return getRuleContexts(CorrContext.class);
		}
		public CorrContext corr(int i) {
			return getRuleContext(CorrContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SQLParser.COMMA, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATEDIFF) | (1L << DATETONUMBER) | (1L << CORR) | (1L << LBR) | (1L << COMMA) | (1L << TEXT) | (1L << ARITHMETIC) | (1L << WS))) != 0)) {
				{
				setState(20);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(12);
					match(TEXT);
					}
					break;
				case LBR:
					{
					setState(13);
					bracket();
					}
					break;
				case WS:
					{
					setState(14);
					match(WS);
					}
					break;
				case ARITHMETIC:
					{
					setState(15);
					match(ARITHMETIC);
					}
					break;
				case DATEDIFF:
					{
					setState(16);
					datediff();
					}
					break;
				case DATETONUMBER:
					{
					setState(17);
					datetonumber();
					}
					break;
				case CORR:
					{
					setState(18);
					corr();
					}
					break;
				case COMMA:
					{
					setState(19);
					match(COMMA);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketContext extends ParserRuleContext {
		public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
		public BracketContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracket; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitBracket(this);
		}
	}

	public final BracketContext bracket() throws RecognitionException {
		BracketContext _localctx = new BracketContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bracket);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			match(LBR);
			setState(26);
			expression();
			setState(27);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatediffContext extends ParserRuleContext {
		public TerminalNode DATEDIFF() { return getToken(SQLParser.DATEDIFF, 0); }
		public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
		public List<PayloadContext> payload() {
			return getRuleContexts(PayloadContext.class);
		}
		public PayloadContext payload(int i) {
			return getRuleContext(PayloadContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(SQLParser.COMMA, 0); }
		public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
		public DatediffContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datediff; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterDatediff(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitDatediff(this);
		}
	}

	public final DatediffContext datediff() throws RecognitionException {
		DatediffContext _localctx = new DatediffContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_datediff);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(DATEDIFF);
			setState(30);
			match(LBR);
			setState(31);
			payload();
			setState(32);
			match(COMMA);
			setState(33);
			payload();
			setState(34);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatetonumberContext extends ParserRuleContext {
		public TerminalNode DATETONUMBER() { return getToken(SQLParser.DATETONUMBER, 0); }
		public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
		public PayloadContext payload() {
			return getRuleContext(PayloadContext.class,0);
		}
		public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
		public DatetonumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datetonumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterDatetonumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitDatetonumber(this);
		}
	}

	public final DatetonumberContext datetonumber() throws RecognitionException {
		DatetonumberContext _localctx = new DatetonumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_datetonumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(DATETONUMBER);
			setState(37);
			match(LBR);
			setState(38);
			payload();
			setState(39);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorrContext extends ParserRuleContext {
		public TerminalNode CORR() { return getToken(SQLParser.CORR, 0); }
		public TerminalNode LBR() { return getToken(SQLParser.LBR, 0); }
		public List<PayloadContext> payload() {
			return getRuleContexts(PayloadContext.class);
		}
		public PayloadContext payload(int i) {
			return getRuleContext(PayloadContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(SQLParser.COMMA, 0); }
		public TerminalNode RBR() { return getToken(SQLParser.RBR, 0); }
		public CorrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterCorr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitCorr(this);
		}
	}

	public final CorrContext corr() throws RecognitionException {
		CorrContext _localctx = new CorrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_corr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(CORR);
			setState(42);
			match(LBR);
			setState(43);
			payload();
			setState(44);
			match(COMMA);
			setState(45);
			payload();
			setState(46);
			match(RBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PayloadContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(SQLParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(SQLParser.TEXT, i);
		}
		public List<BracketContext> bracket() {
			return getRuleContexts(BracketContext.class);
		}
		public BracketContext bracket(int i) {
			return getRuleContext(BracketContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(SQLParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SQLParser.WS, i);
		}
		public List<TerminalNode> ARITHMETIC() { return getTokens(SQLParser.ARITHMETIC); }
		public TerminalNode ARITHMETIC(int i) {
			return getToken(SQLParser.ARITHMETIC, i);
		}
		public List<DatediffContext> datediff() {
			return getRuleContexts(DatediffContext.class);
		}
		public DatediffContext datediff(int i) {
			return getRuleContext(DatediffContext.class,i);
		}
		public List<DatetonumberContext> datetonumber() {
			return getRuleContexts(DatetonumberContext.class);
		}
		public DatetonumberContext datetonumber(int i) {
			return getRuleContext(DatetonumberContext.class,i);
		}
		public List<CorrContext> corr() {
			return getRuleContexts(CorrContext.class);
		}
		public CorrContext corr(int i) {
			return getRuleContext(CorrContext.class,i);
		}
		public PayloadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payload; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).enterPayload(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLListener ) ((SQLListener)listener).exitPayload(this);
		}
	}

	public final PayloadContext payload() throws RecognitionException {
		PayloadContext _localctx = new PayloadContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_payload);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATEDIFF) | (1L << DATETONUMBER) | (1L << CORR) | (1L << LBR) | (1L << TEXT) | (1L << ARITHMETIC) | (1L << WS))) != 0)) {
				{
				setState(55);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(48);
					match(TEXT);
					}
					break;
				case LBR:
					{
					setState(49);
					bracket();
					}
					break;
				case WS:
					{
					setState(50);
					match(WS);
					}
					break;
				case ARITHMETIC:
					{
					setState(51);
					match(ARITHMETIC);
					}
					break;
				case DATEDIFF:
					{
					setState(52);
					datediff();
					}
					break;
				case DATETONUMBER:
					{
					setState(53);
					datetonumber();
					}
					break;
				case CORR:
					{
					setState(54);
					corr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}